[package]
name = "rust1"
version = "0.1.0"
edition = "2021"
authors = ["goodpeanuts <mae664128@gmail.com>"]
description = "A simple calculator created to learn how to work with web gui on rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", default-features = false, features = ["default_fonts", "glow", "persistence"] }
bevy = "0.11"
bevy_egui = "0.22"