[package]
name = "rust1"
version = "0.1.0"
edition = "2021"
authors = ["goodpeanuts <mae664128@gmail.com>"]
description = "A simple calculator created to learn how to work with web gui on rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.eframe]
version = "0.22.0"
[dependencies.egui_extras]
version = "0.22.0"
features = ["svg"]